# cef-template

./: .gitignore  LICENSE  README.md
app/: index.html  package-lock.json  vite.config.ts
app/src/: App.tsx  bridge.ts
replace_me/: CMakeLists.txt
replace_me/cmake/: Findlibgit2.cmake
replace_me/install/: CMakeLists.txt  CPackConfig.cmake  README.md
replace_me/install/cmake/: SetUpDSStore.scpt
replace_me/replace_me/: BUILD.bazel  CMakeLists.txt  cefclient_mac.mm  cefclient_win.cc
replace_me/replace_me/browser/: browser_window.cc  browser_window.h  browser_window_osr_win.cc  browser_window_osr_win.h  browser_window_std_win.cc  browser_window_std_win.h  bytes_write_handler.cc  client_app_browser.cc  client_app_browser.h  client_app_browser_delegate.cc  client_app_browser_delegate.h  client_handler.cc  client_handler.h  client_handler_base.cc  client_handler_base.h  client_handler_osr.cc  client_handler_osr.h  client_handler_std.cc  client_handler_std.h  client_prefs.cc  default_client_handler.cc  default_client_handler.h  event_router_browser_side.cc  event_router_browser_side.h  image_cache.cc  main_context.cc  main_context.h  main_context_impl.cc  main_context_impl.h  main_context_impl_win.cc  main_message_loop_multithreaded_win.cc  main_message_loop_multithreaded_win.h  message_handler.cc  message_handler.h  osr_accessibility_helper.cc  osr_accessibility_node.cc  osr_accessibility_node_win.cc  osr_d3d11_win.cc  osr_dragdrop_events.h  osr_dragdrop_win.cc  (+31 more)
replace_me/replace_me/common/: binary_value_utils.cc  client_app.cc  client_app.h  client_app_other.cc  client_app_other.h  client_switches.cc  client_switches.h  event.h  event_notify.h  notify.h  progress_message_router_utils.cpp  progress_message_router_utils.h  resource_util_win.cc  string_util.cc
replace_me/replace_me/mac/: Info.plist.in  helper-Info.plist.in
replace_me/replace_me/renderer/: client_app_renderer.cc  client_app_renderer.h  client_app_renderer_delegate.cc  client_app_renderer_delegate.h  event_router_render_side.cc  event_router_render_side.h  progress_message_router_render_side.cpp  progress_message_router_render_side.h
replace_me/replace_me/services/: IService.h  MessageTypes.h  test_service.h
replace_me/replace_me/services/setting_service/: SettingService.cc  SettingService.h
replace_me/replace_me/win/: cefclient.aps  cefclient.rc
replace_me/shared/: process_helper_mac.cc
